# team-tailor-insights

./: .gitignore  Dockerfile  README.md  build-and-run.sh  program.py  pyproject.toml  run.sh
.github/workflows/: build_publish_deploy.yml
templates/: index.html
