[tool.poetry]
name = "team-tailor-insights"
version = "0.1.0"
description = ""
authors = ["Jens Tinglev <jens.tinglev@magello.se>"]
readme = "README.md"
packages = [{include = "team_tailor_insights"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
flask-httpauth = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
